vlib/v/checker/tests/recursive_alias_type_err.out
vlib/v/checker/tests/recursive_alias_type_err.vv:1:24: error: recursive declarations of aliases are not allowed - the alias `VTableTypeArray` is used in the array
    1 | type VTableTypeArray = []VTableTypeArray
      |                        ~~~~~~~~~~~~~~~~~
    2 | type VTableTypeArrayPointer = []&VTableTypeArrayPointer
    3 |
vlib/v/checker/tests/recursive_alias_type_err.vv:2:31: error: recursive declarations of aliases are not allowed - the alias `VTableTypeArrayPointer` is used in the array
    1 | type VTableTypeArray = []VTableTypeArray
    2 | type VTableTypeArrayPointer = []&VTableTypeArrayPointer
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | 
    4 | type VTableTypeArrayFixed = [5]VTableTypeArrayFixed
vlib/v/checker/tests/recursive_alias_type_err.vv:4:29: error: recursive declarations of aliases are not allowed - the alias `VTableTypeArrayFixed` is used in the fixed array
    2 | type VTableTypeArrayPointer = []&VTableTypeArrayPointer
    3 | 
    4 | type VTableTypeArrayFixed = [5]VTableTypeArrayFixed
      |                             ~~~~~~~~~~~~~~~~~~~~~~~
    5 | type VTableTypeArrayFixedPointer = [5]&VTableTypeArrayFixedPointer
    6 |
vlib/v/checker/tests/recursive_alias_type_err.vv:5:36: error: recursive declarations of aliases are not allowed - the alias `VTableTypeArrayFixedPointer` is used in the fixed array
    3 | 
    4 | type VTableTypeArrayFixed = [5]VTableTypeArrayFixed
    5 | type VTableTypeArrayFixedPointer = [5]&VTableTypeArrayFixedPointer
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 | 
    7 | type VTableTypeMap = map[string]VTableTypeMap
vlib/v/checker/tests/recursive_alias_type_err.vv:7:22: error: recursive declarations of aliases are not allowed - the alias `VTableTypeMap` is used in the map value
    5 | type VTableTypeArrayFixedPointer = [5]&VTableTypeArrayFixedPointer
    6 | 
    7 | type VTableTypeMap = map[string]VTableTypeMap
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~
    8 | type VTableTypeMapOfPointer = map[string]&VTableTypeMapOfPointer
    9 |
vlib/v/checker/tests/recursive_alias_type_err.vv:8:31: error: recursive declarations of aliases are not allowed - the alias `VTableTypeMapOfPointer` is used in the map value
    6 | 
    7 | type VTableTypeMap = map[string]VTableTypeMap
    8 | type VTableTypeMapOfPointer = map[string]&VTableTypeMapOfPointer
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 | 
   10 | type VTableTypeMapKey = map[VTableTypeMapKey]int
vlib/v/checker/tests/recursive_alias_type_err.vv:10:25: error: recursive declarations of aliases are not allowed - the alias `VTableTypeMapKey` is used in the map key
    8 | type VTableTypeMapOfPointer = map[string]&VTableTypeMapOfPointer
    9 | 
   10 | type VTableTypeMapKey = map[VTableTypeMapKey]int
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~
   11 | type VTableTypeMapOfPointerKey = map[&VTableTypeMapOfPointerKey]int
vlib/v/checker/tests/recursive_alias_type_err.vv:11:34: error: recursive declarations of aliases are not allowed - the alias `VTableTypeMapOfPointerKey` is used in the map key
    9 | 
   10 | type VTableTypeMapKey = map[VTableTypeMapKey]int
   11 | type VTableTypeMapOfPointerKey = map[&VTableTypeMapOfPointerKey]int
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
