vlib/v/checker/tests/recursive_alias_type_err.vv
type VTableTypeArray = []VTableTypeArray
type VTableTypeArrayPointer = []&VTableTypeArrayPointer

type VTableTypeArrayFixed = [5]VTableTypeArrayFixed
type VTableTypeArrayFixedPointer = [5]&VTableTypeArrayFixedPointer

type VTableTypeMap = map[string]VTableTypeMap
type VTableTypeMapOfPointer = map[string]&VTableTypeMapOfPointer

type VTableTypeMapKey = map[VTableTypeMapKey]int
type VTableTypeMapOfPointerKey = map[&VTableTypeMapOfPointerKey]int
